--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "21f1161b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "cc5e9168",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "7257ca31",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "[10000 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "f6c5da9b",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "[10000 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "de4a6c70",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "       [1., 0., 0.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "f540dc8e",
    "metadata": {},
    "outputs": [
@@ -705,7 +705,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "98074aec",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "105793de",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
        "4                0.0              1.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "1696926b",
    "metadata": {},
    "outputs": [],
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "432bb288",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1171,7 @@
        "4                0.0              1.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "82720e6d",
    "metadata": {},
    "outputs": [],
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "d1e5cea9",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1224,7 @@
        "         1.72572313, -0.57638802]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "dde5b228",
    "metadata": {},
    "outputs": [],
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "b4c35277",
    "metadata": {},
    "outputs": [
@@ -1511,7 +1511,7 @@
        "[10000 rows x 13 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "id": "6fc5adbe",
    "metadata": {},
    "outputs": [],
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "2b09cc51",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1554,7 @@
        "(12,)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "d3bc8622",
    "metadata": {},
    "outputs": [],
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "55aaa900",
    "metadata": {},
    "outputs": [
@@ -1590,15 +1590,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense (Dense)               (None, 64)                832       \n",
+      " dense_3 (Dense)             (None, 64)                832       \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 32)                2080      \n",
+      " dense_4 (Dense)             (None, 32)                2080      \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 1)                 33        \n",
+      " dense_5 (Dense)             (None, 1)                 33        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 2945 (11.50 KB)\n",
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "32f5a658",
    "metadata": {},
    "outputs": [
@@ -1628,10 +1628,10 @@
     {
      "data": {
       "text/plain": [
-       "<keras.src.losses.BinaryCrossentropy at 0x301894b90>"
+       "<keras.src.losses.BinaryCrossentropy at 0x301924710>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "ac5b2e49",
    "metadata": {},
    "outputs": [],
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "72a388d7",
    "metadata": {},
    "outputs": [],
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "a869f721",
    "metadata": {},
    "outputs": [],
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "c2a57a8d",
    "metadata": {},
    "outputs": [
@@ -1690,37 +1690,47 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "250/250 [==============================] - 1s 1ms/step - loss: 0.3998 - accuracy: 0.8305 - val_loss: 0.3555 - val_accuracy: 0.8565\n",
+      "250/250 [==============================] - 0s 941us/step - loss: 0.4011 - accuracy: 0.8314 - val_loss: 0.3534 - val_accuracy: 0.8595\n",
       "Epoch 2/100\n",
-      "250/250 [==============================] - 0s 648us/step - loss: 0.3568 - accuracy: 0.8533 - val_loss: 0.3477 - val_accuracy: 0.8540\n",
+      "250/250 [==============================] - 0s 632us/step - loss: 0.3534 - accuracy: 0.8524 - val_loss: 0.3490 - val_accuracy: 0.8630\n",
       "Epoch 3/100\n",
-      "250/250 [==============================] - 0s 632us/step - loss: 0.3487 - accuracy: 0.8570 - val_loss: 0.3486 - val_accuracy: 0.8595\n",
+      "250/250 [==============================] - 0s 632us/step - loss: 0.3459 - accuracy: 0.8590 - val_loss: 0.3449 - val_accuracy: 0.8610\n",
       "Epoch 4/100\n",
-      "250/250 [==============================] - 0s 716us/step - loss: 0.3427 - accuracy: 0.8624 - val_loss: 0.3428 - val_accuracy: 0.8600\n",
+      "250/250 [==============================] - 0s 601us/step - loss: 0.3440 - accuracy: 0.8594 - val_loss: 0.3436 - val_accuracy: 0.8625\n",
       "Epoch 5/100\n",
-      "250/250 [==============================] - 0s 669us/step - loss: 0.3406 - accuracy: 0.8593 - val_loss: 0.3390 - val_accuracy: 0.8620\n",
+      "250/250 [==============================] - 0s 600us/step - loss: 0.3380 - accuracy: 0.8622 - val_loss: 0.3484 - val_accuracy: 0.8645\n",
       "Epoch 6/100\n",
-      "250/250 [==============================] - 0s 666us/step - loss: 0.3364 - accuracy: 0.8640 - val_loss: 0.3374 - val_accuracy: 0.8675\n",
+      "250/250 [==============================] - 0s 598us/step - loss: 0.3371 - accuracy: 0.8602 - val_loss: 0.3446 - val_accuracy: 0.8590\n",
       "Epoch 7/100\n",
-      "250/250 [==============================] - 0s 643us/step - loss: 0.3371 - accuracy: 0.8602 - val_loss: 0.3479 - val_accuracy: 0.8615\n",
+      "250/250 [==============================] - 0s 606us/step - loss: 0.3336 - accuracy: 0.8634 - val_loss: 0.3475 - val_accuracy: 0.8605\n",
       "Epoch 8/100\n",
-      "250/250 [==============================] - 0s 658us/step - loss: 0.3338 - accuracy: 0.8620 - val_loss: 0.3399 - val_accuracy: 0.8615\n",
+      "250/250 [==============================] - 0s 614us/step - loss: 0.3334 - accuracy: 0.8645 - val_loss: 0.3434 - val_accuracy: 0.8620\n",
       "Epoch 9/100\n",
-      "250/250 [==============================] - 0s 631us/step - loss: 0.3334 - accuracy: 0.8627 - val_loss: 0.3410 - val_accuracy: 0.8610\n",
+      "250/250 [==============================] - 0s 606us/step - loss: 0.3298 - accuracy: 0.8633 - val_loss: 0.3400 - val_accuracy: 0.8600\n",
       "Epoch 10/100\n",
-      "250/250 [==============================] - 0s 622us/step - loss: 0.3301 - accuracy: 0.8629 - val_loss: 0.3501 - val_accuracy: 0.8555\n",
+      "250/250 [==============================] - 0s 610us/step - loss: 0.3271 - accuracy: 0.8624 - val_loss: 0.3495 - val_accuracy: 0.8590\n",
       "Epoch 11/100\n",
-      "250/250 [==============================] - 0s 626us/step - loss: 0.3270 - accuracy: 0.8669 - val_loss: 0.3438 - val_accuracy: 0.8600\n",
+      "250/250 [==============================] - 0s 636us/step - loss: 0.3260 - accuracy: 0.8661 - val_loss: 0.3346 - val_accuracy: 0.8605\n",
       "Epoch 12/100\n",
-      "250/250 [==============================] - 0s 640us/step - loss: 0.3222 - accuracy: 0.8664 - val_loss: 0.3567 - val_accuracy: 0.8590\n",
+      "250/250 [==============================] - 0s 625us/step - loss: 0.3216 - accuracy: 0.8671 - val_loss: 0.3842 - val_accuracy: 0.8440\n",
       "Epoch 13/100\n",
-      "250/250 [==============================] - 0s 654us/step - loss: 0.3231 - accuracy: 0.8669 - val_loss: 0.3548 - val_accuracy: 0.8600\n",
+      "250/250 [==============================] - 0s 614us/step - loss: 0.3230 - accuracy: 0.8687 - val_loss: 0.3500 - val_accuracy: 0.8590\n",
       "Epoch 14/100\n",
-      "250/250 [==============================] - 0s 646us/step - loss: 0.3218 - accuracy: 0.8669 - val_loss: 0.3558 - val_accuracy: 0.8570\n",
+      "250/250 [==============================] - 0s 623us/step - loss: 0.3207 - accuracy: 0.8714 - val_loss: 0.3418 - val_accuracy: 0.8610\n",
       "Epoch 15/100\n",
-      "250/250 [==============================] - 0s 637us/step - loss: 0.3207 - accuracy: 0.8681 - val_loss: 0.3443 - val_accuracy: 0.8595\n",
+      "250/250 [==============================] - 0s 610us/step - loss: 0.3136 - accuracy: 0.8721 - val_loss: 0.3505 - val_accuracy: 0.8600\n",
       "Epoch 16/100\n",
-      "250/250 [==============================] - 0s 655us/step - loss: 0.3149 - accuracy: 0.8720 - val_loss: 0.3634 - val_accuracy: 0.8590\n"
+      "250/250 [==============================] - 0s 609us/step - loss: 0.3144 - accuracy: 0.8705 - val_loss: 0.3579 - val_accuracy: 0.8540\n",
+      "Epoch 17/100\n",
+      "250/250 [==============================] - 0s 608us/step - loss: 0.3127 - accuracy: 0.8720 - val_loss: 0.3645 - val_accuracy: 0.8545\n",
+      "Epoch 18/100\n",
+      "250/250 [==============================] - 0s 877us/step - loss: 0.3080 - accuracy: 0.8726 - val_loss: 0.3760 - val_accuracy: 0.8600\n",
+      "Epoch 19/100\n",
+      "250/250 [==============================] - 0s 634us/step - loss: 0.3098 - accuracy: 0.8706 - val_loss: 0.3630 - val_accuracy: 0.8515\n",
+      "Epoch 20/100\n",
+      "250/250 [==============================] - 0s 613us/step - loss: 0.3112 - accuracy: 0.8725 - val_loss: 0.3671 - val_accuracy: 0.8565\n",
+      "Epoch 21/100\n",
+      "250/250 [==============================] - 0s 599us/step - loss: 0.3061 - accuracy: 0.8731 - val_loss: 0.3606 - val_accuracy: 0.8575\n"
      ]
     }
    ],
@@ -1734,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "id": "22b122e0",
    "metadata": {},
    "outputs": [
@@ -1753,10 +1763,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "id": "bc08cb1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
    "source": [
     "## Load Tensorboard Extension\n",
     "%load_ext tensorboard"
@@ -1764,20 +1783,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "id": "0223f28f",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 15345), started 0:45:12 ago. (Use '!kill 15345' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-8ba34b43b48416fa\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-d0671d045bd3185f\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-8ba34b43b48416fa\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-d0671d045bd3185f\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
